Add: feature-application-form, and some changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="loginContainerBorderColor">#2317b1f8</color>
     <color name="activityLogin_container">#FFFFFF</color>
     <color name="activityLogin_editText">#b6b3b3</color>
+
+    <color name="form_edit_text_color">#01afff</color>
 </resources>
