--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,31 @@
     <dimen name="activity_login_bottom_layout_margin">15dp</dimen>
     <dimen name="activity_login_bottom_layout_elevation">12dp</dimen>
     <dimen name="activity_login_bottom_layout_text">18sp</dimen>
+
+    <!--Dimens to use in Activity Application form layout-->
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="top_linear_layout_height">450dp</dimen>
+    <dimen name="cardview_image_height">450dp</dimen>
+    <dimen name="cardview_corner_radius">4dp</dimen>
+    <dimen name="cardview_elevation">8dp</dimen>
+    <dimen name="cardview_max_elevation">6dp</dimen>
+    <dimen name="image_linear_layout_height">400dp</dimen>
+    <dimen name="image_linear_layout_margin_top">10dp</dimen>
+    <dimen name="image_view_profile_pic_margin_top">15dp</dimen>
+    <dimen name="btn_linear_layout_width">200dp</dimen>
+    <dimen name="btn_linear_layout_margin_bottom">15dp</dimen>
+    <dimen name="add_btn_elevation">10dp</dimen>
+    <dimen name="data_entry_cardview_height">500dp</dimen>
+    <dimen name="dog_name_text_view_text_size">18sp</dimen>
+    <dimen name="dog_name_text_view_padding_left">10dp</dimen>
+    <dimen name="dog_name_text_input_margin_bottom">10dp</dimen>
+    <dimen name="dog_name_text_input_padding_left">10dp</dimen>
+    <dimen name="dog_name_text_input_padding_right">10dp</dimen>
+    <dimen name="dog_name_edit_text_size_text">16sp</dimen>
+    <dimen name="dog_city_linear_layout_width">220dp</dimen>
+    <dimen name="dog_city_linear_layout_margin_top">290dp</dimen>
+    <dimen name="dog_city_linear_layout_margin_left">70dp</dimen>
+    <dimen name="btn_date_width">40dp</dimen>
+    <dimen name="btn_date_height">40dp</dimen>
+
 </resources>
