Add: Open Google Maps function, and permissions in manifest

--- a/app/src/main/res/layout/activity_application_form.xml
+++ b/app/src/main/res/layout/activity_application_form.xml
@@ -15,8 +15,7 @@
         android:layout_height="?attr/actionBarSize"
         app:navigationIcon="?attr/homeAsUpIndicator"
         android:elevation="@dimen/toolbar_elevation"
-        android:background="@color/colorPrimary"
-        app:Theme="@style/ThemeOverlay.AppCompat.Light">
+        android:background="@color/colorPrimary">
 
     </android.support.v7.widget.Toolbar>
 
