--- a/app/src/main/res/drawable/button_home.xml
+++ b/app/src/main/res/drawable/button_home.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#f5f9ff"
-        android:endColor="#ffffff"
+        android:startColor="#bfc1c4"
+        android:endColor="#bfc1c4"
 
         />
 
