--- a/app/src/main/res/layout/card_view_complaint.xml
+++ b/app/src/main/res/layout/card_view_complaint.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,9 +32,9 @@
                     android:layout_width="40dp"
                     android:layout_height="60dp"
                     android:layout_gravity="start"
-                    android:src="@drawable/ic_launcher_background"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp" />
+                    android:src="@drawable/ic_profile_placeholder"
+                    app:civ_border_color="#585757"
+                    app:civ_border_width="1dp" />
 
                 <TextView
                     android:id="@+id/userName"
@@ -77,7 +78,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="27dp"
+                android:layout_height="34dp"
                 android:orientation="horizontal"
                 tools:context=".fragments.homeFragment">
 
